Fix trainee search box for TA on Firefox Add margins to cards container to better reflect design mockup

--- a/libraries/bootflat-ftta/bootflat/scss/bootflat/_cards.scss
+++ b/libraries/bootflat-ftta/bootflat/scss/bootflat/_cards.scss
@@ -9,9 +9,10 @@
     display: grid;
     grid-template-columns: repeat(4, minmax(80px, 1fr));
     grid-template-rows: 1fr;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
+    grid-column-gap: 50px;
+    grid-row-gap: 50px;
     grid-auto-flow: row;
+    margin-top: 50px;
   }
 
   .card {
